syntax = "proto3";

package health;

message Empty {}

message HealthReply{
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

service Health {
    rpc Check(Empty) returns (HealthReply) {}
}
